--- a/app/globals.css
+++ b/app/globals.css
@@ -155,7 +155,7 @@
 
   /* Right sidebar */
   .right-sidebar {
-    @apply no-scrollbar hidden h-screen max-h-screen flex-col border-l border-gray-200 xl:flex w-[355px] xl:overflow-y-scroll !important;
+    @apply no-scrollbar hidden h-screen max-h-screen flex-col border-l border-gray-200 min-w-[300px] xl:flex 2xl:min-w-[355px] xl:overflow-y-scroll !important;
   }
 
   .profile-banner {
